--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,12 @@
 {
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "App\\": [
+        "App/Controllers/",
+        "App/Models/Computations/",
+        "App/Models/Logger/",
+        "App/Views/"
+      ]
     }
   },
   "require": {
