--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "psr-4": {
       "App\\": [
         "App/Controllers/",
-        "App/Computations/",
+        "App/Models/Computations/",
         "App/Models/Logger/",
         "App/Views/"
       ]
