--- a/Public/.htaccess
+++ b/Public/.htaccess
@@ -1,6 +1,7 @@
 <IfModule dir_module>
 
     RewriteEngine On
+    RewriteRule ^favicon\.ico$ - [R=404,L]
     RewriteRule ^(.*)$ index.php [L]
 
 </IfModule>
