--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 .idea
-vendor
 Log
 rawLogData
+# Игнорировать все папки внутри vendor, кроме composer
+/vendor/*
+!/vendor/composer/
+
+# Загружать только два файла внутри composer
+/vendor/composer/*
+!/vendor/composer/file1.txt
+!/vendor/composer/file2.txt
