--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "autoload": {
     "psr-4": {
-      "App\\": "App/"
+      "Engine\\": "Engine/",
+      "Modules\\": "Modules/"
     }
   },
   "require": {
