--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .idea
 Log
 ProjectDrafts.txt
-linesAndCharactersCounter
+CounterAll
 
 # Игнорировать все папки внутри vendor, кроме composer
 /vendor/*
