--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
   "require": {
     "ext-readline": "*",
     "psr/log": "^3.0",
-    "psr/container": "^2.0"
+    "psr/container": "^2.0",
+    "ext-pdo": "*"
   }
 }
