--- a/Public/.htaccess
+++ b/Public/.htaccess
@@ -3,5 +3,7 @@
 
     RewriteEngine On
     RewriteRule ^favicon\.ico$ - [R=404,L]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php [L]
 </IfModule>
