--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "autoload": {
         "psr-4": {
+            "App\\": "App/",
             "Engine\\": "Engine/",
             "Modules\\": "Modules/"
         }
