--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
+.docker/mysql
 .idea
 Log
 Test
-Test/ProjectDrafts.txt
-CounterAll
 
 # Игнорировать все папки внутри vendor, кроме composer
 /vendor/*
